gitops/hub/apps/10-scanner/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fetchlabs-scanner
  namespace: scanner
spec:
  selector:
    app: fetchlabs-scanner
  ports:
    - name: http
      port: 80
      targetPort: http
